# mfm

./: .gitignore  LICENSE  README.md  ckpts  pyproject.toml  requirements.txt
conf/: config_finetune.yaml  config_sample.yaml  config_sample_posterior.yaml  config_sample_steering.yaml  config_sample_value.yaml  config_steering_search.yaml  config_train.yaml  config_train_scratch.yaml
conf/SI/: linear.yaml
conf/dataset/: imagenet_1k.yaml
conf/model/: sit_xl_2.yaml
evaluations/: requirements.txt
scripts/: finetune.py  sample.py  sample_posterior.py  sample_search.py  sample_steered.py  sample_value.py  train.py
src/mfm/SI/: __init__.py  interpolants.py  samplers.py
src/mfm/data/: image.py
src/mfm/losses/: __init__.py  finetune.py  losses.py  utils.py
src/mfm/models/: __init__.py  attention.py  base_model.py  config.py  dit.py  model_wrapper.py
src/mfm/utils/: __init__.py  ema.py  evaluation.py  finetuning.py  flash_attention_2_jvp.py  flash_attention_3_jvp.py  image_reward_utils.py  steering.py  training.py  triton_utils.py
